# ScrollBooks

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  setup.cfg  setup_env.sh
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: constants.py  pytest.ini
backend/api/api/: urls.py
backend/api/api/settings/: default.py  test.py
backend/api/books/: admin.py  filters.py  models.py  permissions.py  post_migration.py  serializers.py  signals.py  urls.py  views.py  webhooks.py
backend/api/books/api/: urls.py
backend/api/books/api/v1/: urls.py
backend/api/books/migrations/: 0001_initial.py  0002_remove_author_name_author_user_author_website_and_more.py  0003_alter_category_options_and_more.py  0004_author_created_author_modified_book_created_and_more.py  0004_book_sdfsd.py  0005_order_remove_book_download_count_remove_book_format_and_more.py  0005_remove_book_sdfsd.py  0006_cart_cartitem.py  0007_alter_cartitem_unique_together_delete_userbook.py  0008_order_stripe_session_url_and_more.py  0009_remove_order_stripe_session_url.py  0010_order_stripe_session_url.py  0011_remove_order_total_price_alter_author_bio_and_more.py  0012_alter_author_date_of_birth.py  0013_alter_author_options_alter_book_options_and_more.py  0014_author_picture.py  0015_book_currency.py  0016_book_language_alter_category_name_and_more.py  0017_orderitem_created_orderitem_modified_and_more.py  0018_author_new_id_book_new_id_cart_new_id_and_more.py  0019_adding_uild_values.py  0020_remove_author_id_remove_book_id_remove_cart_id_and_more.py  0021_rename_new_id_author_id_rename_new_id_book_id_and_more.py
backend/api/books/tests/: factories.py  test_models.py  test_views.py
backend/api/books/tests/api/v1/: test_views.py
backend/api/core/: custom_email_backend.py  emails.py  error_codes.py  fields.py  forms.py  middlewares.py  models.py  paginations.py  permissions.py  renderers.py  serializers.py  utils.py  views.py
backend/api/core/templates/core/: base.html  styling.html
backend/api/core/tests/: tests.py  utils.py
backend/api/users/: admin.py  authentication.py  emails.py  filters.py  models.py  permissions.py  post_migration.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/api/users/api/: urls.py
backend/api/users/api/v1/: urls.py
backend/api/users/migrations/: 0001_initial.py  0002_remove_user_date_joined.py  0003_user_phone_number.py  0004_rename_first_name_user_name_remove_user_last_name.py  0005_alter_user_phone_number.py  0006_alter_user_is_active.py  0007_author.py  0008_delete_author.py  0009_user_favorite_books_user_owned_books.py  0010_alter_user_phone_number.py  0011_remove_user_owned_books_user_library_and_more.py  0012_alter_user_options_user_is_verified_and_more.py  0013_user_new_id.py  0014_adding_uild_values.py  0015_remove_user_id_alter_user_new_id.py  0016_rename_new_id_user_id.py
backend/api/users/services/: google_auth.py
backend/api/users/templates/users/: password_reset_email.html  styling.html  verify_email.html
backend/api/users/tests/: factories.py  test_models.py  test_views.py
backend/api/users/tests/api/v1/: test_views.py
backend/postman_collections/v1/: ScrollBooks.postman_collection.json
frontend/: .eslintrc.json  Dockerfile  (+8 more)
(+82 files in other folders)
