[tool.poetry]
name = "scrollbooks-api"
version = "0.1.0"
description = ""
repository = "https://github.com/HusseinAuf/ScrollBooks"
authors = ["Hussein Auf <hu.auf2000@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.11"
django-environ = "^0.9.0"
celery = "^5.2.7"
psycopg2 = "^2.9.3"
redis = "^4.3.4"
django-celery-beat = "^2.3.0"
django-celery-results = "^2.4.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
django-cors-headers = "^3.13.0"
django-model-utils = "^5.0.0"
django-filter = "^24.3"
drf-nested-routers = "^0.94.1"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.15.2"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
stripe = "^11.3.0"
django-allauth = "^65.3.1"
dj-rest-auth = "^7.0.1"
social-auth-app-django = "^5.4.2"
google-auth = "^2.38.0"
django-ulid = "^0.0.4"
drf-spectacular = "^0.28.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
django-extensions = "^3.2.3"
pytest = "^8.3.5"
pytest-django = "^4.10.0"
factory-boy = "^3.3.3"
black = "^25.1.0"
pylint = "^3.3.6"
pylint-django = "^2.6.1"
pylint-celery = "^0.3"
coverage = "^7.7.0"
django-coverage-plugin = "^3.1.0"
safety = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
ensure_newline_before_comments = false
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | migrations
)/
'''

[tool.isort]
profile = 'black'
